# karaoke_helper

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
.github/workflows/: linter.yml
karaoke_helper/: __main__.py  runner.py
karaoke_helper/audio_processing/: constants.py  lyrics_transcription.py  pitch_tracker.py  song_loading.py
karaoke_helper/helpers/: sliding_buffer.py  typing.py
karaoke_helper/ui/: playback.py  runner.py  ui.py
