[tool.poetry]
name = "karaoke_helper"
version = "0.1.0"
description = ""
authors = ["Eloi Charpentier <eloi.charpentier.42@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
librosa = "^0.10.2.post1"
llvmlite = "^0.43.0"
matplotlib = "^3.9.2"
spleeter = "^2.4.0"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
