[tool.poetry]
name = "karaoke_helper"
version = "0.1.0"
description = ""
authors = ["Eloi Charpentier <eloi.charpentier.42@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
librosa = "^0.10.2.post1"
llvmlite = "^0.43.0"
matplotlib = "^3.9.2"
pygame = "^2.6.1"
pathlib = "^1.0.1"
yt-dlp = "^2024.9.27"
sortedcontainers = "^2.4.0"
sounddevice = "^0.5.0"
simpleaudio = "^1.0.4"

[tool.poetry.group.checks.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[tool.poetry.scripts]
karaoke_helper = 'karaoke_helper.__main__:entrypoint'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
